--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <header>
+            <h2 class="project-title">WEATHERIFY</h2>
+        </header>
+        <main>
+            Main Content here
+        </main>
+        <footer>
+            <div class="version">v1.0 August, 2021</div>
+            <div class="author-name">Manavesh Narendra</div>
+            <div class="row-of-links">
+                <div class="col-individual">Telegram</div>
+                <div class="col-individual">Linked In</div>
+                <div class="col-individual">Github</div>
+                <div class="col-individual">Mail</div>
+            </div>
+        </footer>
     </body>
 </html>
