--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@
             <div class="version">v1.0 August, 2021</div>
             <div class="author-name">Manavesh Narendra</div>
             <div class="row-of-links">
-                <div class="col-individual"><img src="img/git.svg"></div>
-                <div class="col-individual"><img src="img/linked.svg"></div>
-                <div class="col-individual"><img src="img/telegram.svg"></div>
-                <div class="col-individual"><img src="img/mail.svg"></div>
+                <a href="https://github.com/manu-karenite" target="_blank"><div class="col-individual"><img src="img/git.svg"></div></a>
+                <a href="https://www.linkedin.com/in/manavesh-narendra-489833196/" target="_blank"><div class="col-individual"><img src="img/linked.svg"></div></a>
+                <a href="https://t.me/manavesh_narendra" target="_blank"><div class="col-individual"><img src="img/telegram.svg"></div></a>
+                <a href="mailto:%20manavesh.narendra@gmail.com" target="_blank"><div class="col-individual"><img src="img/mail.svg"></div></a>
             </div>
-
             </div>
             
         </footer>
